--- a/FEWD/css/style.css
+++ b/FEWD/css/style.css
@@ -3,8 +3,8 @@ body {
   background-image: url('../images/el_cap.jpg');
   background-size: cover;
   background-position: center;
-  font-family: verdana;
-  color: #145715;
+  font-family: arial;
+  color: #4B5B55;
 }
 h1{
   font-size: 25px;
@@ -20,12 +20,92 @@ a {
 a:hover {
 text-decoration: underline;
 }
-.container {
+#categories {
+  margin-top: 50px;
+  margin-bottom: 200px;
+}
+
+#categories img {
+  /*border-radius-top: 30px;*/
+}
+
+#categories li {
+  display: inline-block;
+}
+.tall-photo {
+  font-size: 25px;
+  background-color: #4B5B55;
+  height: 400px;
+  color: white;
+}
+.tall-photo div {
+  margin: 5px 10px;
+  font-weight: 100;
+
+}
+
+.tall-photo a {
+}
+
+.tall-photo a:hover {
+  opacity: .4;
+}
+.title {
+  margin-left: 200px;
+  margin-top: 50px;
+  font-size: 100px;
   width: 800px;
+  text-align: left;
+  line-height: 70px;
+  letter-spacing: -5px;
+  font-weight: 100;
+}
+.logo{
+  float: left;
+  padding: 5px;
+}
+.nav {
+  background: rgba(0, 20, 0, 0.80);
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  color: white;
+}
+
+.nav ul {
+  margin: 15px 30px;
+  float: right;
+  /*font-family: arial;*/
+  font-weight: 100;
+
+}
+
+.nav li {
+  display: inline-block;
+  font-size: 25px;
+
+
+  /*background: rgba(0, 255, 0, .2);*/
+  border-radius: 10%;
+}
+
+.nav a:hover {
+  background-color: rgba(229, 163, 66, 1);
+  text-decoration: none;
+  border-radius: 3px;
+}
+
+.nav a {
+  color: white;
+  padding: 5px;
+}
+.container {
+  width: 75%;
   background: rgba(225, 225, 225, .9);
   text-align: center;
-  margin: 50px auto;
-  border-radius: 10px;
+  margin: 100px auto;
+  border-radius: 5px;
   padding: 20px;
 }
 .profile_img {
@@ -36,4 +116,5 @@ text-decoration: underline;
   max-width: 300px;
   margin: 10px auto;
 }
+
 
