--- a/FEWD/css/style.css
+++ b/FEWD/css/style.css
@@ -38,7 +38,7 @@ text-decoration: underline;
   height: 400px;
   color: white;
 }
-.tall-photo div {
+div.tall-photo div {
   margin: 5px 10px;
   font-weight: 100;
 
