--- a/FEWD/css/style.css
+++ b/FEWD/css/style.css
@@ -1,1 +1,39 @@
 
+body {
+  background-image: url('../images/el_cap.jpg');
+  background-size: cover;
+  background-position: center;
+  font-family: verdana;
+  color: #145715;
+}
+h1{
+  font-size: 25px;
+
+}
+p {
+  width: 500px;
+  margin: 20px auto;
+}
+a {
+  text-decoration: none;
+}
+a:hover {
+text-decoration: underline;
+}
+.container {
+  width: 800px;
+  background: rgba(225, 225, 225, .9);
+  text-align: center;
+  margin: 50px auto;
+  border-radius: 10px;
+  padding: 20px;
+}
+.profile_img {
+  height: 250px;
+}
+.image {
+  border-radius: 5px;
+  max-width: 300px;
+  margin: 10px auto;
+}
+
