--- a/FEWD/homework/adventuring/css/style.css
+++ b/FEWD/homework/adventuring/css/style.css
@@ -1,15 +1,50 @@
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 body{
-/*  background-color: #f8f7fc;
-  color: #333;
-  font-family: helvetica, arial, sans-serif;
-  line-height: 1.3em;*/
+  font-family: helvetica;
 }
 
 header {
-  height: 125px;
-  background-color: tomato;
+  height: 80px;
+  /*background-color: tomato;*/
+  max-width: 1140px;
+  overflow: hidden;
+  margin: auto;
+}
+
+header a {
+  text-decoration: none;
+}
+
+header .logo {
+  float: left;
+  font-size: 40px;
+  height: 100px;
+  padding: 25px;
+  color: #728A42;
+}
+
+header .nav {
+  float: right;
+  margin: 25px;
+}
+
+header .nav li {
+  font-size: 30px;
+  display: inline;
+  font-weight: 100;
+  padding: 10px;
+  border-left: 1px solid black;
+  color: #8CA952;
+}
+
+header .nav li:hover {
+  text-shadow: 1px 1px 1px green;
+}
+
+li.last {
+  border-right: 1px solid black;
+  /*background-color: red;*/
 }
 
 footer  {
@@ -27,28 +62,114 @@ footer  {
   /*border: 1px solid rgba(0, 0, 0, 0.1);*/
   /*border-radius: 3px;*/
 }
+.container .main_content h1 {
+  font-size: 25px;
+  margin-left: 10px;
+  margin-top: 20px;
+  font-weight: 100;
+}
 
 .hero_bar {
   height: 300px;
-  background-color: goldenrod;
-  background-image: url('http://placekitten.com/1500/300')
+  /*background-color: goldenrod;*/
+  background-image: url('../images/el_cap.jpg');
+  background-position: left;
+  overflow: hidden;
 }
 
-input {
-  width: 200px;
-  height: 50px;
+.search {
+  background-color: rgba(200, 200, 200, .65);
+  box-shadow: 2px 2px 2px 2px rgba(100, 100, 100, .5);
+  border-radius: 5px;
+  overflow: hidden;
+  max-width: 1120px;
+  /*height: 60px;*/
+  /*position: relative;*/
+  /*left: 100px;*/
+  /*top: 40px;*/
+  margin: 50px auto;
+  padding: 10px;
+}
+
+.search h1 {
+  font-size: 60px;
+  /*background-color: red;*/
+  float: left;
+  font-weight: 300;
+  padding: 10px;
+  color: #343D3A;
+
+}
+.search_box {
+  width: 400px;
+  height: 40px;
   font-size: 20px;
-  margin-top: 50px;
+  /*margin-top: 50px;*/
+  /*position: relative;*/
+  /*right: 200px;*/
+  /*padding: 10px;*/
   float: right;
-  position: relative;
-  right: 200px;
+  padding: 5px;
+}
+
+.submit_botton {
+  height: 38px;
+  width: 100px;
+  float: left;
+  /*background-color: #91B651;*/
+  background-image: linear-gradient(rgb(175, 202, 125) 20%, rgb(153, 187, 89)), none;
+  color: #EDEFEE;
+  border-radius: 5px;
+  box-shadow: 0 1px 1px grey;
+  border: 1px solid #738C42;
+  font-size: 15px;
+  margin-left: 15px;
+  float: right;
+}
+
+.submit_botton:hover {
+  background-image: linear-gradient(rgb(200, 227, 150) 20%, rgb(172, 200, 104)), none;
 }
 
 .course {
   width: 360px;
-  height: 288px;
-  background-color: green;
+  height: 250px;
+  /*background-color: green;*/
   margin: 10px;
+  float: left;
+  border-radius: 5px;
+  border: 1px solid lightgrey;
+  overflow: hidden;
+}
+
+.course:hover {
+  box-shadow: 0 0 10px green;
+  /*background-color: green;*/
+}
+
+.course .course_info {
+  padding: 5px;
+  color: #8CA952;
+  /*background-color: yellow;*/
+  height: 50px;
+  z-index: 1;
+}
+
+.course .course_photo {
+  height: 200px;
+  background-color: red;
+  overflow: hidden;
+}
+
+.course .course_info .course_name {
+  font-size: 20px;
+  color: #728A42;
+  clear: left;
+}
+.course .course_info .price {
+  float: right;
+}
+.course .course_info .locaton {
   float: left;
 }
 
