added login and company pages

--- a/FEWD/homework/adventuring/css/style.css
+++ b/FEWD/homework/adventuring/css/style.css
@@ -1,7 +1,7 @@
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 body{
-  font-family: helvetica;
+  font-family: 'Pathway Gothic One', sans-serif;
 }
 
 header {
