--- a/FEWD/homework/adventuring/css/style_sign_in.css
+++ b/FEWD/homework/adventuring/css/style_sign_in.css
@@ -29,7 +29,7 @@
   /*border-radius: 5px;*/
 }
 
-.submit {
+.login_submit {
   height: 38px;
   width: 100px;
   background-image: linear-gradient(rgb(175, 202, 125) 20%, rgb(153, 187, 89)), none;
@@ -37,13 +37,14 @@
   border-radius: 5px;
   box-shadow: 0 1px 1px grey;
   border: 1px solid #738C42;
-  font-size: 15px;
+  font-size: 22px;
   display: block;
   margin: 30px auto;
+  padding-top: 6px;
 
 }
 
-.submit:hover {
+.login_submit:hover {
   background-image: linear-gradient(rgb(200, 227, 150) 20%, rgb(172, 200, 104)), none;
 }
 
