--- a/FEWD/homework/adventuring/css/style.css
+++ b/FEWD/homework/adventuring/css/style.css
@@ -34,7 +34,7 @@ header .nav li {
   display: inline;
   font-weight: 100;
   padding: 10px;
-  border-left: 1px solid #728A42;
+  /*border-left: 1px solid #728A42;*/
   color: #8CA952;
 }
 
@@ -43,8 +43,15 @@ header .nav li:hover {
   color: #A5BD49;
 }
 
+.active {
+  background-color: rgba(114, 138, 66, .01);
+  border-radius: 5px;
+  padding: 8px 0 8px 0;
+  box-shadow: 1px 2px 10px rgba(0, 0, 0, .5);
+}
+
 header .nav li.last {
-  border-right: 1px solid #728A42;
+  /*border-right: 1px solid #728A42;*/
   /*background-color: red;*/
 }
 
